some more example added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ management.endpoints.web.base-path=/manage
 management.endpoints.web.exposure.include=*
 
 server.error.include-message=always
+notification.service=email
